# pypkgs_mk

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_mk.rst
tests/: test_pypkgs_mk.py
