[tool.poetry]
name = "pypkgs_mk"
version = "0.1.0"
description = "A sample python package for week 1"
authors = ["Micah Kwok <micahkwok@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
